Phase one complete. Updated pdf to reflect so and added notes for the next phase. Added comments to java files and cleaned up a little bit.